Fix SSR bug
